@startuml

set separator none
package artist.controller {
    class ArtistController <<Function Group>> {
        + {static} addArtist(req: Request, res: Response): RequestHandler
        + {static} getAllArtists(req: Request, res: Response): RequestHandler
        + {static} getArtistByID(req: Request, res: Response): RequestHandler
        + {static} getArtistSongsByID(req: Request, res: Response): RequestHandler
        + {static} getArtistAlbumsByID(req: Request, res: Response): RequestHandler
        + {static} updateArtist(req: Request, res: Response): RequestHandler
        + {static} deleteArtist(req: Request, res: Response): RequestHandler
    }
}

package services {
    class Redis <<Singleton>> {
        - client: UpstashRedis

        + set<T>(key: string, data: T, options?: SetCommandOptions): Promise<"OK" | T | null>
        + get<T>(key: string): Promise<T | null>
        + del(keys: string[]): Promise<void>
    }
    class Cloudinary <<Singleton>> {
        + upload(file: Express.Multer.File,folder: string,id: string): Promise<string>
        + delete(folder: string, fileName: string): Promise<void>
    }
}

ArtistController ..> Redis
ArtistController ..> Cloudinary

@enduml